updated contact form to inclue outgoing email to me

--- a/updated_portfolio/html/contact.html
+++ b/updated_portfolio/html/contact.html
@@ -38,33 +38,9 @@
     <h1>Contact</h1>
     <hr>
 
-    <form>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <input type="text" class="form-control" placeholder="First name">
-            </div>
-            <div class="col-md-6">
-                <input type="text" class="form-control" placeholder="Last name">
-            </div>
-            <div class="col-md-6">
-                <input type="text" class="form-control" placeholder="Email address">
-            </div>
-            <div class="col-md-6">
-                <input type="text" class="form-control" placeholder="Phone number">
-            </div>
-
-            <form>
-                <div class="form-group">
-                    <textarea class="form-control-Msg" id="Message" rows="5" placeholder="Message"></textarea>
-                </div>
-        </div>
-        </div>
+<img src="https://i.pcmag.com/imagery/lineups/06VF4ZcETlFMvRHqRu6dDX0-1.fit_lim.size_1200x630.v_1569492704.jpg">
 
         <div class="col-md-12">
-            <button class="btn btn-primary" type="submit">Submit</button>
+            <a href="mailto:allisonbarnard07@gmail.com" class="btn btn-primary">Email Me</a>
         </div>
-        </form>
-    </form>
-
 </html>
