--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="portfolio.html">
     <link rel="stylesheet" href="contact.html">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="index.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
@@ -58,7 +58,7 @@
 
 
         <div class="card" style="width: 25rem;">
-            <img class="card-img-top" src="../photos/Photo.png" alt="Allison">
+            <img class="card-img-top" src="Photo.png" alt="Allison">
             <div class="card-body">
                 <h5 class="card-title">About Me</h5>
                 <p class="card-text">Hello! My name is Allison. I am a current student at Case Western Reserve's Coding Bootcamp. I love to read, travel and workout. Please view my portfolio for some of my recent work.</p>
