--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="index.html">
     <link rel="stylesheet" href="contact.html">
-    <link rel="stylesheet" href="../css/portfolio.css">
+    <link rel="stylesheet" href="portfolio.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
@@ -44,7 +44,7 @@
     <div class="row">
         <div class="col-sm-md-4">
             <div class="card bg-dark text-white">
-                <img src="../photos/job_search.png" class="card-img" alt="Job Search App Image">
+                <img src="job_search.png" class="card-img" alt="Job Search App Image">
                 <div class="card-img-overlay">
                     <h2 class="card-title"><a href="https://allisonbarnard07.github.io/Job-Search/" <strong>Job Search</strong></h></a>
                 </div>
@@ -54,7 +54,7 @@
 
 
             <div class="card bg-dark text-white">
-                <img src="../photos/password_generator.PNG" class="card-img" alt="Password Generator">
+                <img src="password_generator.PNG" class="card-img" alt="Password Generator">
                 <div class="card-img-overlay">
                     <h2 class="card-title"><a href="https://allisonbarnard07.github.io/password_generator/" <strong> Password Generator</strong></h></a>
                 </div>
@@ -63,7 +63,7 @@
             <br>
 
             <div class="card bg-dark text-white">
-                <img src="../photos/website_cleanup.PNG"" class="card-img" alt="Games Image">
+                <img src="website_cleanup.PNG" class="card-img" alt="Games Image">
                 <div class="card-img-overlay">
                     <h2 class="card-title"><a href="https://allisonbarnard07.github.io/website_cleanup/" <strong>Website Clean Up</strong></h></a>
                 </div>
