--- a/portfolio.html
+++ b/portfolio.html
@@ -4,13 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="index.html">
     <link rel="stylesheet" href="contact.html">
     <link rel="stylesheet" href="portfolio.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+        integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+        integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
     <title>Responsive Portfolio</title>
 </head>
 
@@ -18,7 +25,8 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="index.html">Allison Barnard</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -46,7 +54,8 @@
             <div class="card bg-dark text-white">
                 <img src="job_search.png" class="card-img" alt="Job Search App Image">
                 <div class="card-img-overlay">
-                    <h2 class="card-title"><a href="https://allisonbarnard07.github.io/Job-Search/" <strong>Job Search</strong></h></a>
+                    <h2 class="card-title"><a href="https://allisonbarnard07.github.io/Job-Search/" <strong>Job
+                            Search</strong></h></a>
                 </div>
             </div>
 
@@ -54,9 +63,20 @@
 
 
             <div class="card bg-dark text-white">
+                <img src="employeeManagementSystem.gif" class="card-img" alt="Employee Management System GIF">
+                <div class="card-img-overlay">
+                    <h2 class="card-title"><a href="https://github.com/allisonbarnard07/employeeManagementSystem"
+                            <strong>Employee Management Sysytem</strong></h></a>
+                </div>
+            </div>
+
+            <br>
+
+            <div class="card bg-dark text-white">
                 <img src="password_generator.PNG" class="card-img" alt="Password Generator">
                 <div class="card-img-overlay">
-                    <h2 class="card-title"><a href="https://allisonbarnard07.github.io/password_generator/" <strong> Password Generator</strong></h></a>
+                    <h2 class="card-title"><a href="https://allisonbarnard07.github.io/password_generator/" <strong>
+                            Password Generator</strong></h></a>
                 </div>
             </div>
 
@@ -65,11 +85,30 @@
             <div class="card bg-dark text-white">
                 <img src="website_cleanup.PNG" class="card-img" alt="Games Image">
                 <div class="card-img-overlay">
-                    <h2 class="card-title"><a href="https://allisonbarnard07.github.io/website_cleanup/" <strong>Website Clean Up</strong></h></a>
+                    <h2 class="card-title"><a href="https://allisonbarnard07.github.io/website_cleanup/" <strong>Website
+                            Clean Up</strong></h></a>
                 </div>
             </div>
 
 
+            <br>
+
+            <div class="card bg-dark text-white">
+                <img src="readMe.gif" class="card-img" alt="ReadMe Generator Image">
+                <div class="card-img-overlay">
+                    <h2 class="card-title"><a href="https://github.com/allisonbarnard07/ReadMeGenerator" <strong>ReadMe
+                            Generator</strong></h></a>
+                </div>
+            </div>
+
+            <br>
+
+            <div class="card bg-dark text-white">
+                <img src="buildAndFlex.PNG" class="card-img" alt="Build & Flex Image">
+                <div class="card-img-overlay">
+                    <h2 class="card-title"><a href="https://projecttwo-cwru.herokuapp.com/" <strong>Build & Flex</strong></h></a>
+                </div>
+            </div>
 
 
 </body>
