--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
+                <li>
+                    <a href="https://github.com/allisonbarnard07" class="btn btn-primary">Github</a>
+                </li>
             </ul>
         </div>
     </nav>
