--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="portfolio.html">
-    <link rel="stylesheet" href="contact.html">
     <link rel="stylesheet" href="index.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
@@ -33,8 +31,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
-                <li>
-                    <a href="https://github.com/allisonbarnard07" class="btn btn-primary">Github</a>
+                <li class="profile-button">
+                    <a href="https://github.com/allisonbarnard07" class=btn btn-light>Github</a>
+                </li>
+                <li class="profile-button">
+                    <a href="https://docs.google.com/document/d/11146FOBozArXkyonDy77DLRKj66uydntyl5UStvGXsE/edit?usp=sharing" class=btn btn-light>Resume</a>
+                </li>
+                <li class="profile-button">
+                    <a href="https://www.linkedin.com/in/allison-barnard-bb44a7100/" class="btn btn-light">LinkedIn</a>
                 </li>
             </ul>
         </div>
